[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flux"
version = "0.1.0"
description = "A small HTTP honeypot: fake /.env canaries, fake /.git/ repos, a fake webshell, and a modular tarpit."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Smith" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
flux = "flux.server:main"

[tool.setuptools.packages.find]
include = ["flux*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
